src/test/ui/nll/where_clauses_in_structs.stderr
error: lifetime may not live long enough
  --> $DIR/where_clauses_in_structs.rs:13:11
   |
LL | fn bar<'a, 'b>(x: Cell<&'a u32>, y: Cell<&'b u32>) {
   |        --  -- lifetime `'b` defined here
   |        |
   |        lifetime `'a` defined here
LL |     Foo { x, y };
   |           ^ requires that `'a` must outlive `'b`

error: aborting due to previous error

